discussion/kv_engine/155181/155181_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

Refactor: Move from void to CookieIface for cookie pointers

This patch was created using the following steps:
1. find . -name ‘*.h’ -exec gsed -i 's/void[\s]*\*/CookieIface\*/g' {}
\;
2. find . -name '*.cc' -exec gsed -i 's/void[\s]*\*/CookieIface\*/g' {}
\;
3. Add for dec of CookieIface when needed
4. Add static_cast<const void*>() to any Cookie* being passed to
 spdlogger.
5. Roll back any invalid modifications from void* to CookieIface (e.g
in TopKeys or KVStore interfaces).
6. Revert any changes to engine_common.h to keep the AddStatFn and
AddResponseFn callback definitions the same. As we pass multiple data
types over the cookie arg.
7. Fix any build failures
8. Fix clang-tidy warnings related to the changes in the patch

Change-Id: I26c4c8b2a0c040c43d5afad4aaccd4f4aa749387

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-06-08 16:42:27.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-08 17:21:30.000000000
Message: 
Patch Set 7: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9606/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/mcaudit.cc:20:10: error: "memcached_audit_events.h" file not found [clang-diagnostic-error]
#include "memcached_audit_events.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/benchmarks/engine_fixture.h:15:10: error: "benchmark/benchmark.h" file not found [clang-diagnostic-error]
#include <benchmark/benchmark.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/bucket_logger.h:14:10: error: "spdlog/logger.h" file not found [clang-diagnostic-error]
#include "spdlog/logger.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/active_stream.h:19:10: error: "spdlog/common.h" file not found [clang-diagnostic-error]
#include <spdlog/common.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/passive_stream.h:14:10: error: "spdlog/common.h" file not found [clang-diagnostic-error]
#include "spdlog/common.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/cbstat_collector.h:17:10: error: "spdlog/fmt/fmt.h" file not found [clang-diagnostic-error]
#include <spdlog/fmt/fmt.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/statistics/stats.def.h:131:10: error: "stats_config.def.h" file not found [clang-diagnostic-error]
#include "stats_config.def.h" // NOLINT(*)
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/logger/logger.h:28:10: error: "spdlog/fmt/ostr.h" file not found [clang-diagnostic-error]
#include <spdlog/fmt/ostr.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/magma/include/libmagma/magma.h:29:10: error: "spdlog/spdlog.h" file not found [clang-diagnostic-error]
#include <spdlog/spdlog.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9606/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/mcaudit.cc:20:10:
error: "memcached_audit_events.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9606/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8204/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36562/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/149/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31242/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10253/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11182/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11602/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11330/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19185/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2021-06-09 08:16:20.000000000
Message: 
Patch Set 7: Verified+1

Overriding -1 from clang_tidy due to the errors being not related to this patch. And are latent include issues
----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2021-06-09 08:16:23.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-06-09 08:22:39.000000000
Message: 
Patch Set 7:

Are we planning to replace the "gsl not null" checks with CookieIface& ?
----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2021-06-09 08:24:28.000000000
Message: 
Patch Set 7:

Yes but this is a stepping stone, the ref refactor will require more involved refactoring hence why tis not being done with the type change.
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-06-09 12:47:08.000000000
Message: 
Patch Set 7: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
